--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SOURCES
     src/debugger.cpp
 )
 
+
 # Detect if we're compiling for WebAssembly with Emscripten
 if(EMSCRIPTEN)
     # WebAssembly build configuration
@@ -34,9 +35,9 @@ if(EMSCRIPTEN)
     add_executable(cpu_wasm src/wasm_main.cpp)
     target_link_libraries(cpu_wasm cpu_core)
     
-    # Emscripten-specific flags
+    # Emscripten-specific flags - use a simpler approach
     set(EM_LINK_FLAGS 
-        "--bind -s WASM=1 -s MODULARIZE=1 -s EXPORT_NAME='CPUEmulator' -s ALLOW_MEMORY_GROWTH=1 -s EXPORTED_RUNTIME_METHODS=['ccall','cwrap'] -s NO_EXIT_RUNTIME=1")
+        "-s WASM=1 -s MODULARIZE=1 -s EXPORT_NAME='CPUEmulator' -s ALLOW_MEMORY_GROWTH=1 -s EXPORTED_RUNTIME_METHODS=['ccall','cwrap','UTF8ToString','writeAsciiToMemory'] -s NO_EXIT_RUNTIME=1 -s EXPORTED_FUNCTIONS=['_main','_init','_debugger_step','_debugger_run','_debugger_stop','_debugger_reset','_debugger_is_running','_debugger_add_breakpoint','_debugger_remove_breakpoint','_debugger_clear_breakpoints','_debugger_get_register_a','_debugger_get_register_x','_debugger_get_register_y','_debugger_get_register_sp','_debugger_get_register_pc','_debugger_get_register_status','_debugger_get_status_flag','_debugger_read_memory','_debugger_write_memory','_debugger_get_instruction_count','_debugger_get_cycle_count','_debugger_set_pc','_debugger_disassemble_around_pc','_debugger_disassemble_range','_debugger_test','_debugger_init_test','_debugger_print_state']")
     
     # Export main as CPU_wasm
     set_target_properties(cpu_wasm PROPERTIES
