--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -10,7 +10,6 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -22,7 +21,7 @@ jobs:
 
     - name: Configure CMake
       run: |
-        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release
+        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=OFF
 
     - name: Build
       run: |
@@ -39,7 +38,6 @@ jobs:
     name: Test
     needs: build
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -53,6 +51,13 @@ jobs:
         sudo make
         sudo cp lib/*.a /usr/lib
 
+    - name: Set up GTest environment
+      run: |
+        # Create GTEST_ROOT environment variable
+        echo "GTEST_ROOT=/usr" >> $GITHUB_ENV
+        # Verify GTest libraries exist
+        ls -la /usr/lib/libgtest*.a || echo "GTest libraries not found!"
+
     - name: Download build artifacts
       uses: actions/download-artifact@v4
       with:
@@ -63,7 +68,15 @@ jobs:
       run: |
         chmod -R +x ${{ github.workspace }}/build
 
+    - name: Configure tests
+      run: |
+        cmake -B ${{ github.workspace }}/build-tests -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=ON
+
+    - name: Build tests
+      run: |
+        cmake --build ${{ github.workspace }}/build-tests --config Release
+
     - name: Run tests
-      working-directory: ${{ github.workspace }}/build
+      working-directory: ${{ github.workspace }}/build-tests
       run: |
         ctest -C Release --output-on-failure
