--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   build:
     build:
@@ -34,3 +32,13 @@ services:
     command: /bin/bash
     tty: true
     stdin_open: true
+
+  web:
+    image: python:3-alpine
+    ports:
+      - 5173:8080
+    volumes:
+      - ./web:/app/web
+    working_dir: /app
+    command: python -m http.server 8080 --directory /app/web
+    restart: unless-stopped
