Added docker.sock as a volume to traefik

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
     ports:
       - 80:80
       - 8080:8080
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
   web:
     image: python:3-alpine
