--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,4 +66,11 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.web.rule=Host(`codeknight.dev`)"
       - "traefik.http.routers.web.entrypoints=web"
+      - "traefik.http.routers.web.middlewares=redirect-to-https@docker"
+      - "traefik.http.routers.web-secure.rule=Host(`codeknight.dev`)"
+      - "traefik.http.routers.web-secure.entrypoints=websecure"
+      - "traefik.http.routers.web-secure.tls=true"
+      - "traefik.http.routers.web-secure.tls.certresolver=myresolver"
       - "traefik.http.services.web.loadbalancer.server.port=8080"
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+
