Added watch tower for automatic deployments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,12 @@ services:
     <<: *build-base
     profiles: [dev]
     command: build_all.sh
-  
+
   test:
     <<: *build-base
     profiles: [dev, test]
     command: build_and_test.sh
-  
+
   shell:
     <<: *build-base
     profiles: [dev]
@@ -61,7 +61,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./letsencrypt:/letsencrypt
     restart: unless-stopped
-  
+
   web-prod:
     <<: *web-base
     profiles: [prod]
@@ -80,3 +80,18 @@ services:
       - "traefik.http.routers.web-secure.tls.certresolver=myresolver"
       - "traefik.http.services.web.loadbalancer.server.port=8080"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      - "com.centurylinklabs.watchtower.enable=true"
+
+  watchtower:
+      image: containrrr/watchtower
+      profiles: [prod]
+      volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
+        - /root/.docker/config.json:/config.json
+      command: --interval 30 --cleanup --label-enable
+      labels:
+        - "com.centurylinklabs.watchtower.enable=true"
+      environment:
+        - TZ=UTC
+        - WATCHTOWER_NOTIFICATIONS=shoutrrr
+      restart: unless-stopped
