--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,7 +23,7 @@ on:
 
 # Define environment variables
 env:
-  DOCKER_IMAGE: ${{ github.repository_owner }}/nes-emulator
+  DOCKER_IMAGE: ${{ github.repository_owner_lc }}/nes-emulator
   PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
@@ -72,9 +72,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-
       - name: Extract version
+
         id: version
         run: |
           VERSION=$(grep -E "VERSION [0-9]+" CMakeLists.txt | grep -oE "[0-9]+\.[0-9]+\.[0-9]+" || echo "latest")
@@ -101,6 +100,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Convert to lowercase repository name
+        id: repo_name
+        run: |
+          REPO_OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          echo "repository_owner_lc=${REPO_OWNER_LC}" >> $GITHUB_ENV
+          echo "repository_owner_lc=${REPO_OWNER_LC}" >> $GITHUB_OUTPUT
+
       - name: Set tags
         id: set_tags
         run: |
@@ -108,14 +114,15 @@ jobs:
           if [ "$TAG" = "latest" ]; then
             TAG=${{ env.VERSION }}
           fi
-          echo "TAGS=${DOCKER_IMAGE}:${TAG},${DOCKER_IMAGE}:latest" >> $GITHUB_ENV
-          echo "tags=${DOCKER_IMAGE}:${TAG},${DOCKER_IMAGE}:latest" >> $GITHUB_OUTPUT
+          DOCKER_IMAGE_LC=$(echo "${{ env.DOCKER_IMAGE }}" | tr '[:upper:]' '[:lower:]')
+          echo "TAGS=${DOCKER_IMAGE_LC}:${TAG},${DOCKER_IMAGE_LC}:latest" >> $GITHUB_ENV
+          echo "tags=${DOCKER_IMAGE_LC}:${TAG},${DOCKER_IMAGE_LC}:latest" >> $GITHUB_OUTPUT
 
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.prod
+          file: ./Dockerfile
           platforms: ${{ env.PLATFORMS }}
           push: true
           tags: ${{ env.TAGS }}
